kube-manifests/NginxApp1-Deployment.yaml
#######################################
# App1 and Cluster IP
#######################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
  labels:
   app: app1-nginx
spec:
  replicas: 1
  selector: 
    matchLabels:
     app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
      - name: app1-nginx
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name:  app1-nginx-clusterip-service
  labels:
    app: app1-nginx
spec:
  selector:
    app:  app1-nginx
  type:  ClusterIP
  ports:
    - protocol: TCP
      port:  80
      targetPort:  80
---
# #######################################
# # App2 and Cluster IP
# #######################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-nginx-deployment
  labels:
   app: app2-nginx
spec:
  replicas: 1
  selector: 
    matchLabels:
     app: app2-nginx
  template:
    metadata:
      labels:
        app: app2-nginx
    spec:
      containers:
      - name: app2-nginx
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name:  app2-nginx-clusterip-service
  labels:
    app: app2-nginx
spec:
  selector:
    app:  app2-nginx
  type:  ClusterIP
  ports:
    - protocol: TCP
      port:  80
      targetPort:  80

---

##########################################################
# Ingress manifest for External IP - path based routing 
##########################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-path-based
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
     paths:
     - path: /app1(/|$)(.*)
       pathType: Prefix
       backend:
          service:
            name: app1-nginx-clusterip-service
            port:
              number: 80
     - path: /app2(/|$)(.*)
       pathType: Prefix
       backend:
          service:
            name: app2-nginx-clusterip-service
            port:
              number: 80
     - path: /(.*)
       pathType: Prefix
       backend:
          service:
            name: app1-nginx-clusterip-service
            port:
              number: 80

#######################################
# host based routing 
#######################################
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginxapp1-ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#   - host: "51.141.124.204.nip.io"
#     http:
#      paths:
#      - path: /
#        backend:
#           service:
#             name: app1-nginx-clusterip-service
#             port:
#               number: 80
#        pathType: Exact

---
#######################################
# path based routing single
#######################################
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginxapp1-ingress-path-based
#   annotations:
#     kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#   - http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#           service:
#             name: app1-nginx
#             port:
#               number: 80

---
#######################################
# App
#######################################
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: app1-nginx-deployment
#   labels:
#    app: app1-nginx
# spec:
#   replicas: 1
#   selector: 
#     matchLabels:
#      app: app1-nginx
#   template:
#     metadata:
#       labels:
#         app: app1-nginx
#     spec:
#       containers:
#       - name: app1-nginx
#         image: stacksimply/kube-nginapp2:1.0.0
#         ports:
#           - containerPort: 80
#         env:
#          - name: TITLE
#            value: "APP1 - welcome to Azure AKS services"
